--- a/css/style.css
+++ b/css/style.css
@@ -1,135 +1,132 @@
+:root {
+  --bg: black;
+  --color: rgb(76, 217, 33);
+}
+
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-:root {
-  --warnaHijau: rgb(0, 255, 38);
-  --bg: rgb(20, 20, 20);
 }
 
 body {
-  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bg);
+  color: var(--color);
+  background-image: url(/img/adrien-olichon-RCAhiGJsUUE-unsplash.jpg);
+  background-size: cover;
 }
 
-nav {
-  width: 100%;
-  height: 60px;
+.navbar {
   display: flex;
-  align-items: center;
   justify-content: space-around;
+  align-items: center;
+  padding: 1rem 7%;
+  background-color: rgba(4, 13, 2, 0.8);
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 
-nav h1 {
-  font-size: 22px;
+.navbar .navbar-logo {
+  font-size: 2rem;
   font-weight: 700;
-  color: var(--warnaHijau);
+  color: var(--color);
 }
 
-nav h1 span {
-  color: white;
+.navbar .navbar-nav a {
+  display: inline-block;
+  color: #fff;
+  font-size: 1.3rem;
+  margin: 0 1rem;
 }
-
-nav ul {
-  display: flex;
-}
-
-nav ul li {
-  list-style-type: none;
-  margin: 15px;
-  font-size: 17px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: aliceblue;
-}
-
-nav ul li a:hover {
-  color: var(--warnaHijau);
-}
-
-.navbar-menu a {
-  color: aliceblue;
+.navbar .navbar-nav a:hover {
+  color: #fff;
 }
 
 #hamburger-menu {
   display: none;
 }
 
+.navbar .navbar-extra a {
+  color: #fff;
+}
+
+.navbar .navbar-extra a:hover {
+  color: var(--color);
+}
+
 .container {
-  height: 550px;
+  height: 650px;
   width: 100%;
-  background-image: url(img/adrien-olichon-RCAhiGJsUUE-unsplash.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position-y: -250px;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container .title {
-  margin-left: 100px;
-  color: aliceblue;
-  background-color: rgba(0, 0, 0, 0.1);
-  width: 750px;
+  color: rgb(77, 230, 17);
+  padding: 30px;
 }
 
 .container .title .besar {
-  font-weight: 900;
-  font-size: 60px;
-  color: var(--warnaHijau);
+  font-weight: 700;
+  font-size: 5rem;
+  color: #fff;
 }
 
 .about {
   width: 100%;
-  background-color: rgb(20, 20, 20);
+  padding-top: 50px;
 }
 
 .about h1 {
-  color: aliceblue;
+  color: var(--color);
   padding: 30px;
   text-align: center;
 }
 
 .about .tentang {
-  width: 900px;
   margin: auto;
   padding-bottom: 30px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .about .tentang p {
-  color: var(--warnaHijau);
+  color: #fff;
   text-align: center;
   padding-bottom: 30px;
-  font-size: 19px;
-  width: 390px;
+  font-size: 1.5rem;
+  width: 400px;
 }
 
 .headlayanan {
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 }
 
 h1 {
   text-align: center;
-  padding: 30px;
+  padding-top: 70px;
 }
 
 .layanan {
+  padding-top: 30px;
   width: 900px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  text-align: center;
   align-items: center;
-  color: black;
+  color: #fff;
 }
 
 .layanan .cards {
@@ -137,7 +134,7 @@ h1 {
   width: 230px;
   height: 280px;
   text-align: center;
-  background-color: var(--warnaHijau);
+  background-color: rgb(24, 24, 24);
   overflow: hidden;
   margin: 15px;
   box-shadow: 3px 3px 5px #000;
@@ -150,6 +147,10 @@ h1 {
   border-bottom: 1px solid var(--warnaHijau);
 }
 
+.layanan .cards h3 {
+  font-size: 2rem;
+}
+
 .contact {
   width: 100%;
   background-color: var(--bg);
@@ -160,11 +161,11 @@ h1 {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: 30px;
+  margin: 30px;
 }
 
 .contact a {
-  color: rgb(0, 255, 38);
+  color: var(--color);
 }
 
 .contact a:hover {
@@ -173,11 +174,12 @@ h1 {
 
 .contact address {
   padding: 30px;
-  font-size: 14px;
+  font-size: 1.2rem;
 }
 footer {
   width: 100%;
   background-color: black;
+  border-top: 1px solid rgb(33, 95, 15);
 }
 
 footer p {
@@ -196,45 +198,44 @@ footer p a {
 /* laptop */
 @media (max-width: 1366px) {
   html {
-    font-size: 75%;
+    font-size: 80%;
   }
 }
-
 /* tablet */
-
 @media (max-width: 768px) {
   html {
-    font-size: 62.5%;
+    font-size: 62%;
   }
 
   #hamburger-menu {
     display: inline-block;
   }
 
-  nav ul {
+  .navbar .navbar-nav {
     position: absolute;
-    flex-direction: column;
+    background-color: rgb(16, 31, 13);
     top: 100%;
     right: -100%;
-    background-color: var(--bg);
-    width: 30rem;
     height: 100vh;
-    align-items: center;
+    width: 28rem;
+    display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
-    padding-bottom: 30px;
+    align-items: center;
     transition: 1s;
-    opacity: 0;
   }
 
-  nav ul.aktif {
+  .navbar .navbar-nav a {
+    font-size: 1.6rem;
+  }
+
+  .navbar .navbar-nav.aktif {
     right: 0;
-    opacity: 1;
   }
 }
-
 /* mobile phone */
 @media (max-width: 450px) {
   html {
-    font-size: 55%;
+    font-size: 50%;
   }
 }
